# Clixed

./: .gitignore  .nvim-dap.lua  Cargo.toml  Dockerfile  compose.yaml  compose.yml  init.sql
src/: main.rs
src/models/: collection.rs  image.rs  image_collection.rs  mod.rs  user.rs
src/routes/: default.rs  images.rs  mod.rs
static/css/: main.css
templates/: about.html  contact.html  home.html  index.html  settings.html  shared.html
