[profile.dev]
debug = true

[package]
name = "clixed"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8" , features = ["multipart"]}
tokio = { version = "1", features = ["full"] }
tera = "1.19.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
mime = "0.3"
tracing-subscriber = "0.3"
axum-server = "0.7.2"
uuid = { version = "1.17.0" , features = ["v4"]}
bytes = "1.10.1"
tracing = "0.1"
sanitize-filename = "0.6.0"
tokio-util = "0.7.15"
mozjpeg = "0.10.13"
